Convertir_en_xls

--- a/src/components/dashoboard/Footer/footer.module.css
+++ b/src/components/dashoboard/Footer/footer.module.css
@@ -5,12 +5,14 @@
     padding: 1em 1.5em;
     background-color: var(--color-white);
     gap: 1em;
+
 }
 
 .dashboard_footer>span {
     font-size: 0.9em;
     font-weight: 400;
     color: var(--color-black);
+    margin-top: 900px;
 }
 
 .dashboard_footer>span>a {
